refactor: Se eliminan las clases y métodos relacionados con el estado de revisión de historias clínicas (secciones), incluyendo controladores, servicios, mapeadores y repositorios. Se actualizan las migraciones de base de datos para reflejar estos cambios.